[project]
name = "langchain-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.0",
    "langchain-community>=0.0.20",
    "langchain-google-genai>=1.0.1",
    "langchain-groq>=0.0.1",
    "langchain-openai>=0.0.6",
    "langchain-tavily>=0.2.18",
    "langgraph>=0.0.24",
    "python-dotenv>=1.2.2",
]

